import shared from "../article-flag-content.native";

describe("Article Flag on android", () => {
  shared();
});
